tests/ui/pyclass_sync.stderr
error[E0277]: `std::rc::Rc<i32>` cannot be shared between threads safely
  --> $DIR/pyclass_sync.rs:4:1
   |
4  | #[pyclass]
   | ^^^^^^^^^^ `std::rc::Rc<i32>` cannot be shared between threads safely
   |
  ::: $WORKSPACE/src/pyclass.rs:76:87
   |
76 |     PyTypeInfo<Layout = PyCell<Self>> + Sized + PyClassAlloc + PyMethodsImpl + Send + Sync
   |                                                                                       ---- required by this bound in `pyo3::pyclass::PyClass`
   |
   = help: within `NotThreadSafe`, the trait `std::marker::Sync` is not implemented for `std::rc::Rc<i32>`
   = note: required because it appears within the type `NotThreadSafe`
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `std::rc::Rc<i32>` cannot be sent between threads safely
  --> $DIR/pyclass_sync.rs:4:1
   |
4  | #[pyclass]
   | ^^^^^^^^^^ `std::rc::Rc<i32>` cannot be sent between threads safely
   |
  ::: $WORKSPACE/src/pyclass.rs:76:80
   |
76 |     PyTypeInfo<Layout = PyCell<Self>> + Sized + PyClassAlloc + PyMethodsImpl + Send + Sync
   |                                                                                ---- required by this bound in `pyo3::pyclass::PyClass`
   |
   = help: within `NotThreadSafe`, the trait `std::marker::Send` is not implemented for `std::rc::Rc<i32>`
   = note: required because it appears within the type `NotThreadSafe`
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
